Добавил бизнес-логику для crud операций, обновил swagger, убрал year_month
