# internal/pkg/entity/subscription.go
@@ -1,13 +1,15 @@
 package entity
 
 import (
-	"github.com/compico/em-task/internal/pkg/types"
+	"time"
 )
 
 type Subscription struct {
-	ID          int             `db:"id"`
-	ServiceName string          `db:"service_name"`
-	Price       int             `db:"price"`
-	UserID      string          `db:"user_id"`
-	StartDate   types.MonthYear `db:"start_date"`
+	ID          int       `db:"id"`
+	ServiceName string    `db:"service_name"`
+	Price       int       `db:"price"`
+	UserID      string    `db:"user_id"`
+	StartDate   time.Time `db:"start_date"`
 }
+
+type Subscriptions []*Subscription
